--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ﻿<!doctype html>
 <html>
-  
-  <body>
-           <h1>Home</h1>
+  <head>  
+    <script src="index.js"></script>
+  </head>
+  <body onload="renderDynamicContent()">
+    <h1>Home</h1>
+    <div id="dynamic-content"></div>
   </body>
 </html>
