--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="index.js"></script>
   </head>
   <body onload="renderDynamicContent()">
-    <h1>Home</h1>
+    <h1>Hello World</h1>
     <div id="dynamic-content"></div>
   </body>
 </html>
